--- a/androidUtil/build.gradle
+++ b/androidUtil/build.gradle
@@ -27,7 +27,6 @@ android {
 //            abiFilters 'armeabi', 'armeabi-v7a'
 //            //, 'x86_64', 'arm64-v8a','x86',
 //        }
-        versionName "1.1.1"
     }
 
 
@@ -42,7 +41,6 @@ android {
     }
     sourceSets {
         main {
-            jni.srcDirs = []
             jniLibs.srcDirs = ['libs']
         }
     }
@@ -118,5 +116,5 @@ ext{
 }
 
 
-apply from: "../pack-upload.gradle"
-apply from: "../maven-release-kline-aar.gradle"
+//apply from: "../pack-upload.gradle"
+//apply from: "../maven-release-kline-aar.gradle"
