--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+    buildToolsVersion "30.0.2"
     dataBinding {
         enabled = true
     }
@@ -26,16 +26,21 @@ android {
         }
     }
 
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
 }
 
 dependencies {
+
+    //test
+    testImplementation 'junit:junit:4.+'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation "com.google.truth:truth:1.0.1"
+    androidTestImplementation "com.google.truth:truth:1.0.1"
+
+//    testImplementation "org.robolectric:robolectric:4.3.1"
+//    testImplementation 'org.mockito:mockito-core:2.8.9'
+
+
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.1.0'
@@ -43,15 +48,6 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
-    testApi 'junit:junit:4.12'
-    androidTestApi 'androidx.test.espresso:espresso-core:3.1.0'
-    androidTestApi 'androidx.test.ext:junit:1.1.1'
-    androidTestApi 'androidx.test:runner:1.1.0'
-    androidTestApi 'androidx.test:rules:1.1.0'
-
-    testImplementation "org.robolectric:robolectric:4.3.1"
-
-    testImplementation 'org.mockito:mockito-core:2.8.9'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -63,7 +59,7 @@ dependencies {
 //    api("com.android:util:1.1.1")
     implementation("com.squareup.okhttp3:okhttp:4.1.0")
 
-    implementation "androidx.core:core-ktx:1.2.0"
+    implementation "androidx.core:core-ktx:1.6.0"
 
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'com.contrarywind:Android-PickerView:4.1.9'
