--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,13 @@ apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
 
-apply plugin: 'kotlin-android-extensions'
+apply plugin: 'dagger.hilt.android.plugin'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlin-android-extensions'
+
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 31
     buildToolsVersion "30.0.2"
     dataBinding {
         enabled = true
@@ -14,7 +16,7 @@ android {
     defaultConfig {
         applicationId "com.john.kot"
         minSdkVersion 24
-        targetSdkVersion 24
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -26,19 +28,33 @@ android {
         }
     }
 
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
+
 }
 
 dependencies {
 
-    //test
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    testImplementation "com.google.truth:truth:1.0.1"
-    androidTestImplementation "com.google.truth:truth:1.0.1"
 
-//    testImplementation "org.robolectric:robolectric:4.3.1"
-//    testImplementation 'org.mockito:mockito-core:2.8.9'
+    // Local Unit Tests
+    testImplementation "junit:junit:4.13"
+
+    testImplementation "com.google.truth:truth:1.0.1"
+
+
+    //mockito
+    testImplementation 'org.mockito:mockito-core:3.1.0'
+    androidTestImplementation "org.mockito:mockito-core:3.1.0"
+
+
+    androidTestImplementation "androidx.test:core:1.2.0"
+
+    //mockk
+    testImplementation "io.mockk:mockk:1.12.0"
+    androidTestImplementation "io.mockk:mockk-android:1.12.0"
 
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -68,6 +84,10 @@ dependencies {
 
     implementation 'com.permissionx.guolindev:permissionx:1.3.0'
 
+
+    //hilt
+    implementation "com.google.dagger:hilt-android:2.28-alpha"
+    kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
 
 
 
