--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ buildscript {
         // in the individual module build.gradle files
 //        classpath 'com.jakewharton:butterknife-gradle-plugin:10.1.0'
 //        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2' // add plugin
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
+
 
     }
 }
