--- a/androidUtil/build.gradle
+++ b/androidUtil/build.gradle
@@ -11,7 +11,7 @@ kapt {
 }
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
 
 
     dataBinding {
@@ -19,7 +19,7 @@ android {
     }
 
     defaultConfig {
-        flavorDimensions "versionCode"
+//        flavorDimensions "versionCode"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 //        ndk {
