--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ apply plugin: 'kotlin-android-extensions'
 
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 30
     buildToolsVersion "30.0.2"
     dataBinding {
         enabled = true
@@ -16,7 +16,7 @@ android {
     defaultConfig {
         applicationId "com.john.kot"
         minSdkVersion 24
-        targetSdkVersion 31
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -52,9 +52,18 @@ dependencies {
 
     androidTestImplementation "androidx.test:core:1.2.0"
 
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+
+
     //mockk
     testImplementation "io.mockk:mockk:1.12.0"
     androidTestImplementation "io.mockk:mockk-android:1.12.0"
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+
+    testImplementation "org.robolectric:robolectric:4.6.1"
+
+    testImplementation "org.robolectric:robolectric:4.7-SNAPSHOT"
 
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -88,6 +97,8 @@ dependencies {
     //hilt
     implementation "com.google.dagger:hilt-android:2.28-alpha"
     kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
+
+    
 
 
 
