--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity
-                android:name=".hilt.HiltActivity"
+                android:name=".test.robolec.MyActivity"
                 android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,13 +30,16 @@
             </intent-filter>
         </activity>
         <activity
+                android:name=".hilt.HiltActivity"
+                android:exported="true"></activity>
+        <activity
                 android:name=".viewGroup.ViewGroupActivity"
+                android:exported="true"></activity>
+        <activity
+                android:name=".tool.glide.lifecycle.GlideActivity"
                 android:exported="true">
 
         </activity>
-        <activity
-                android:name=".tool.glide.lifecycle.GlideActivity"
-                android:exported="true"></activity>
         <activity
                 android:name=".mvvm.lifecycle.LifeCycleActivity"
                 android:exported="true" />
