--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
 //        maven { url "http://localhost:8081/repository/jhmaven/"}
-
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
     }
 }
 
@@ -40,7 +40,6 @@ task clean(type: Delete) {
 
 ext {
     roomVersion = "2.2.5"
-    robolectricVersion = "4.3"
 
     archLifecycleVersion = '2.2.0'
 
@@ -54,7 +53,6 @@ ext {
     runnerVersion = "1.3.0-alpha01"
     rulesVersion = "1.3.0-alpha01"
     espressoVersion = "3.3.0-alpha01"
-    robolectricVersion = "4.3"
     truthVersion = "0.42"
     constraintlayout = "1.1.3"
     anko_version='0.10.8'
