--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,26 +21,27 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity
+                android:name=".ui.FontActivity"
+                android:exported="true" >
+
+        </activity>
+        <activity
                 android:name=".hilt.SecondActivity"
                 android:exported="true" />
         <activity
                 android:name=".test.robolec.MyActivity"
-                android:exported="true"></activity>
+                android:exported="true" />
         <activity
                 android:name=".hilt.HiltActivity"
                 android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
                 android:name=".viewGroup.ViewGroupActivity"
                 android:exported="true" />
         <activity
                 android:name=".tool.glide.lifecycle.GlideActivity"
-                android:exported="true"></activity>
+                android:exported="true" />
         <activity
                 android:name=".mvvm.lifecycle.LifeCycleActivity"
                 android:exported="true" />
@@ -65,7 +66,6 @@
         <activity android:name=".ui.scroll.ScrollViewActivity" />
         <activity android:name=".ui.dbdraw.DatabindingDrawableActivity" />
         <activity android:name=".mvvm.LiveDataActivity" />
-        <activity android:name=".DetailLiveActivity" />
         <activity android:name=".mvvm.livedata.LiveDataTestActivity" />
         <activity android:name=".mvvm.demo.UseDemoActivity" />
 
@@ -104,7 +104,13 @@
         <activity android:name=".ui.GradientActivity" />
         <activity android:name=".ui.MeasureLearnActivity" />
         <activity android:name=".ui.CircleProgressActivity" />
-        <activity android:name=".ui.ConstraintPlaceholderActivity" />
+        <activity android:name=".ui.ConstraintPlaceholderActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".elec.ElecActivity" />
         <activity android:name=".arch.recyclerview.MainActivity" />
         <activity android:name=".ui.ScrollPickerActivity" />
