--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
 //        classpath 'com.jakewharton:butterknife-gradle-plugin:10.1.0'
@@ -23,10 +23,10 @@ buildscript {
 
 allprojects {
     repositories {
-
-        mavenLocal()
-
         google()
+        mavenCentral()
+
+
         jcenter()
         maven { url "https://jitpack.io" }
 //        maven { url "http://localhost:8081/repository/jhmaven/"}
