--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,10 +21,11 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity
+                android:name=".ui.TriangleActivity"
+                android:exported="true"></activity>
+        <activity
                 android:name=".ui.FontActivity"
-                android:exported="true" >
-
-        </activity>
+                android:exported="true" />
         <activity
                 android:name=".hilt.SecondActivity"
                 android:exported="true" />
@@ -33,12 +34,16 @@
                 android:exported="true" />
         <activity
                 android:name=".hilt.HiltActivity"
-                android:exported="true">
-
-        </activity>
+                android:exported="true" />
         <activity
                 android:name=".viewGroup.ViewGroupActivity"
-                android:exported="true" />
+                android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
                 android:name=".tool.glide.lifecycle.GlideActivity"
                 android:exported="true" />
@@ -104,12 +109,8 @@
         <activity android:name=".ui.GradientActivity" />
         <activity android:name=".ui.MeasureLearnActivity" />
         <activity android:name=".ui.CircleProgressActivity" />
-        <activity android:name=".ui.ConstraintPlaceholderActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        <activity android:name=".ui.ConstraintPlaceholderActivity"></activity>
+        <activity android:name=".ui.Constraint1Activity">
         </activity>
         <activity android:name=".elec.ElecActivity" />
         <activity android:name=".arch.recyclerview.MainActivity" />
