feat: flow laout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="com.john.kot">
+    package="com.john.kot" >
 
     <uses-feature
-            android:name="android.hardware.camera"
-            android:required="true" />
+        android:name="android.hardware.camera"
+        android:required="true" />
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -13,31 +13,36 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
-            android:name=".MyApp"
-            android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+        android:name=".MyApp"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme" >
         <activity
-                android:name=".ui.TriangleActivity"
-                android:exported="true"></activity>
+            android:name=".ui.constraint.ConstraintAngerActivity"
+            android:exported="true" >
+
+        </activity>
         <activity
-                android:name=".ui.FontActivity"
-                android:exported="true" />
+            android:name=".ui.TriangleActivity"
+            android:exported="true" />
         <activity
-                android:name=".hilt.SecondActivity"
-                android:exported="true" />
+            android:name=".ui.FontActivity"
+            android:exported="true" />
         <activity
-                android:name=".test.robolec.MyActivity"
-                android:exported="true" />
+            android:name=".hilt.SecondActivity"
+            android:exported="true" />
         <activity
-                android:name=".hilt.HiltActivity"
-                android:exported="true" />
+            android:name=".test.robolec.MyActivity"
+            android:exported="true" />
         <activity
-                android:name=".viewGroup.ViewGroupActivity"
-                android:exported="true" >
+            android:name=".hilt.HiltActivity"
+            android:exported="true" />
+        <activity
+            android:name=".viewGroup.ViewGroupActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -45,21 +50,21 @@
             </intent-filter>
         </activity>
         <activity
-                android:name=".tool.glide.lifecycle.GlideActivity"
-                android:exported="true" />
+            android:name=".tool.glide.lifecycle.GlideActivity"
+            android:exported="true" />
         <activity
-                android:name=".mvvm.lifecycle.LifeCycleActivity"
-                android:exported="true" />
+            android:name=".mvvm.lifecycle.LifeCycleActivity"
+            android:exported="true" />
         <activity android:name=".mvvm.livedata.xiangxue.LiveData2Activity" />
         <activity
-                android:name=".mvvm.livedata.xiangxue.LiveData1Activity"
-                android:exported="true" />
+            android:name=".mvvm.livedata.xiangxue.LiveData1Activity"
+            android:exported="true" />
         <activity
-                android:name=".mvvm.dongnao.viewmodel.ViewModel1Activity"
-                android:exported="true" />
+            android:name=".mvvm.dongnao.viewmodel.ViewModel1Activity"
+            android:exported="true" />
         <activity
-                android:name=".mvvm.dongnao.lifecycle.Step2Activity"
-                android:exported="true" />
+            android:name=".mvvm.dongnao.lifecycle.Step2Activity"
+            android:exported="true" />
         <activity android:name=".tool.rx.WriteRxjavaActivity" />
         <activity android:name=".net.OkhtttpActivity" />
         <activity android:name=".permission.PemissionxUseActivity" />
@@ -75,15 +80,15 @@
         <activity android:name=".mvvm.demo.UseDemoActivity" />
 
         <provider
-                android:name=".CameraProvider"
-                android:authorities="${applicationId}.fileprovider"
-                android:exported="false"
-                android:grantUriPermissions="true">
+            android:name=".CameraProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true" >
 
             <!-- grantUriPermissions: 设置允许获取访问uri的临时权限 exported:设置允许获取访问uri的临时权限 -->
             <meta-data
-                    android:name="android.support.FILE_PROVIDER_PATHS"
-                    android:resource="@xml/camera_path" />
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/camera_path" />
             <!-- 用于设置FileProvider的文件访问路径 -->
         </provider>
 
@@ -109,8 +114,8 @@
         <activity android:name=".ui.GradientActivity" />
         <activity android:name=".ui.MeasureLearnActivity" />
         <activity android:name=".ui.CircleProgressActivity" />
-        <activity android:name=".ui.ConstraintPlaceholderActivity"></activity>
-        <activity android:name=".ui.Constraint1Activity">
+        <activity android:name=".ui.constraint.ConstraintPlaceholderActivity" />
+        <activity android:name=".ui.constraint.Constraint1Activity" >
         </activity>
         <activity android:name=".elec.ElecActivity" />
         <activity android:name=".arch.recyclerview.MainActivity" />
