--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,8 +51,6 @@ dependencies {
     //mockito
     testImplementation 'org.mockito:mockito-core:3.1.0'
     androidTestImplementation "org.mockito:mockito-core:3.1.0"
-
-
     androidTestImplementation "androidx.test:core:1.2.0"
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
@@ -99,15 +97,16 @@ dependencies {
     api 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:5.3.1'
 
     implementation 'com.permissionx.guolindev:permissionx:1.3.0'
-
+    implementation 'androidx.lifecycle:lifecycle-common:2.4.1'
+//    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
 
     //hilt
-    implementation "com.google.dagger:hilt-android:2.28-alpha"
-    kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
+    implementation "com.google.dagger:hilt-android:2.40"
+    kapt "com.google.dagger:hilt-android-compiler:2.40"
 
-    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha01'
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
     // When using Kotlin.
-    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
 
 
 
