--- a/androidUtil/build.gradle
+++ b/androidUtil/build.gradle
@@ -31,19 +31,16 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
-
 }
 
 dependencies {
     testImplementation "junit:junit:4.13"
 
 
-    api 'androidx.appcompat:appcompat:1.1.0'
-    api 'androidx.core:core:1.1.0'
+    api 'androidx.appcompat:appcompat:1.4.1'
     api 'androidx.legacy:legacy-support-v4:1.0.0'
     api 'androidx.cardview:cardview:1.0.0'
-    api 'com.google.android.material:material:1.0.0-rc01'
+    api 'com.google.android.material:material:1.7.0-alpha01'
     // RxJava 2
     api 'io.reactivex.rxjava2:rxandroid:2.0.2'
     api 'io.reactivex.rxjava2:rxjava:2.2.9'
@@ -59,16 +56,12 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:1.7.21'
 
 
-
     api "androidx.room:room-rxjava2:2.2.0"
     api "androidx.room:room-runtime:2.2.0"
     api "androidx.room:room-ktx:2.2.0"
     kapt "androidx.room:room-compiler:2.2.0"
 
 
-    api 'androidx.legacy:legacy-support-v4:1.0.0'
-    api 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    api 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
 
     api "androidx.navigation:navigation-fragment-ktx:2.2.0"
     api "androidx.navigation:navigation-ui-ktx:2.2.0"
@@ -80,7 +73,7 @@ dependencies {
     api "androidx.paging:paging-runtime:2.1.1"
 }
 
-ext{
+ext {
     USERNAME = "john"
     PASSWORD = "1234"
     PUBLISH_GROUP_ID = "com.android"
