--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ apply plugin: 'kotlin-android-extensions'
 
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion "30.0.2"
     buildFeatures {
         viewBinding = true
@@ -19,7 +19,7 @@ android {
     defaultConfig {
         applicationId "com.john.kot"
         minSdkVersion 24
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -40,19 +40,13 @@ android {
 }
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
 
     // Local Unit Tests
     testImplementation "junit:junit:4.13"
-
     testImplementation "com.google.truth:truth:1.0.1"
-
-
-    //mockito
-    testImplementation 'org.mockito:mockito-core:3.1.0'
-    androidTestImplementation "org.mockito:mockito-core:3.1.0"
     androidTestImplementation "androidx.test:core:1.2.0"
-
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
 
 
@@ -61,25 +55,16 @@ dependencies {
     androidTestImplementation "io.mockk:mockk-android:1.12.0"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-
     testImplementation "org.robolectric:robolectric:4.6.1"
-
     testImplementation "org.robolectric:robolectric:4.7-SNAPSHOT"
-
-
     testImplementation 'org.hamcrest:hamcrest:2.2'
 
 
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.lifecycle:lifecycle-common:2.4.1'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
 
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.material:material:1.1.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
-
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
 
@@ -88,28 +73,16 @@ dependencies {
     api project(path: ':androidUtil')
 //    api("com.android:util:1.1.1")
     implementation("com.squareup.okhttp3:okhttp:4.1.0")
-
-    implementation "androidx.core:core-ktx:1.6.0"
-
+    implementation "androidx.core:core-ktx:1.7.0"
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'com.contrarywind:Android-PickerView:4.1.9'
-
-    api 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:5.3.1'
-
+    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:5.3.1'
     implementation 'com.permissionx.guolindev:permissionx:1.3.0'
-    implementation 'androidx.lifecycle:lifecycle-common:2.4.1'
-//    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
 
     //hilt
     implementation "com.google.dagger:hilt-android:2.40"
     kapt "com.google.dagger:hilt-android-compiler:2.40"
-
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
-    // When using Kotlin.
-    kapt 'androidx.hilt:hilt-compiler:1.0.0'
 
-
-
-
-
+    implementation 'com.airbnb.android:lottie:3.4.0'
 }
