--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,6 @@
 include ':app'
 include ':androidUtil'
 //project(':androidUtil').projectDir = new File('../CasanubeHealth/androidUtil')
+//project(':lottie').projectDir = new File('../lottie-android/lottie')
+
 
