feat: dependency organized

--- a/androidUtil/build.gradle
+++ b/androidUtil/build.gradle
@@ -1,32 +1,19 @@
 apply plugin: 'com.android.library'
-
 apply plugin: 'kotlin-android'
-//apply plugin: 'kotlin-parcelize'
 apply plugin: 'kotlin-kapt'
 
-kapt {
-    arguments {
-        arg("AROUTER_MODULE_NAME", project.getName())
-    }
-}
 
 android {
     compileSdkVersion 30
-
-
     dataBinding {
         enabled = true
     }
-
-
 
     sourceSets {
         main {
             jniLibs.srcDirs = ['libs']
         }
     }
-
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -35,7 +22,6 @@ android {
 
 dependencies {
     testImplementation "junit:junit:4.13"
-
 
     api 'androidx.appcompat:appcompat:1.4.1'
     api 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -51,26 +37,22 @@ dependencies {
     api 'com.squareup.okhttp3:logging-interceptor:3.9.0'
     api 'com.jakewharton.timber:timber:4.6.0'
     api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.46'
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.10"
     api files('libs/mina-core-2.0.19.jar')
-    implementation 'org.slf4j:slf4j-api:1.7.21'
+    implementation 'org.slf4j:slf4j-api:1.7.32'
+
+    api "androidx.room:room-runtime:2.4.2"
+    api "androidx.room:room-ktx:2.4.2"
+    kapt "androidx.room:room-compiler:2.4.2"
 
 
-    api "androidx.room:room-rxjava2:2.2.0"
-    api "androidx.room:room-runtime:2.2.0"
-    api "androidx.room:room-ktx:2.2.0"
-    kapt "androidx.room:room-compiler:2.2.0"
-
-
-
-    api "androidx.navigation:navigation-fragment-ktx:2.2.0"
-    api "androidx.navigation:navigation-ui-ktx:2.2.0"
+    api "androidx.navigation:navigation-fragment-ktx:2.4.2"
+    api "androidx.navigation:navigation-ui-ktx:2.4.2"
     // https://mvnrepository.com/artifact/org.jooq/joor-java-8
     api group: 'org.jooq', name: 'joor-java-8', version: '0.9.7'
     api group: 'org.apache.commons', name: 'commons-collections4', version: '4.0'
 
-
-    api "androidx.paging:paging-runtime:2.1.1"
+    api "androidx.paging:paging-runtime:3.1.1"
 }
 
 ext {
